--- a/excel.html
+++ b/excel.html
@@ -4,20 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Excel Page</title>
+    <!-- Link to an external CSS file hosted on a content delivery network (CDN) -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-
 </head>
 <body>
 
     <header>
+        <!-- Navigation bar using Bootstrap Navbar component -->
         <nav class="navbar navbar-expand-lg bg-body-tertiary">
             <div class="container-fluid">
               <a class="navbar-brand" href="#">JS-ASSIGNMENT2</a>
+              <!-- Hamburger button for collapsing the navigation links on smaller screens -->
               <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
                 <span class="navbar-toggler-icon"></span>
               </button>
               <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
                 <div class="navbar-nav">
+                  <!-- Navigation links -->
                   <a class="nav-link" href="index.html">Home</a>
                   <a class="nav-link active" href="excel.html">Excel</a>
                 </div>
@@ -26,13 +29,17 @@
           </nav>
         <h1>Excel Functions</h1>
     </header>
+
     <main>
         <div class="container-fluid">
+            <!-- Form to collect user input for Excel functions -->
             <form id="excel-form">
                 <label for="nums-input">Enter your numbers separated by spaces:</label>
                 <input type="text" id="nums-input">
+                <!-- Fieldset for selecting the operation -->
                 <fieldset>
                     <legend>Operation:</legend>
+                    <!-- Radio buttons for different Excel operations -->
                     <div class="form-check">
                         <input class="form-check-input" type="radio" name="operation" id="AutoSum" value="1" checked>
                         <label for="AutoSum" class="form-check-label">AutoSum</label>
@@ -49,19 +56,25 @@
                         <input class="form-check-input" type="radio" name="operation" id="Min" value="4">
                         <label for="Min" class="form-check-label">Min</label>
                     </div>
-
                 </fieldset>
+                <!-- Submit button to calculate the result -->
                 <input type="submit" value="Calculate" class="btn btn-outline-dark">
+                <!-- Element to display the calculated result -->
                 <p>Result: <span id="result"></span></p>
             </form>
         </div>
     </main>
+
     <footer>
+        <!-- Footer section with attribution for the assignment and authors -->
         <p>
             Georgian @ ILAC - HTML, CSS, and JavaScript Assignment#2 - Liyuan Luo, Adedoyin, Shuhan Yang
         </p>
     </footer>
+
+    <!-- Link to the main JavaScript file -->
     <script src="js/main.js"></script>
+    <!-- Link to Bootstrap's JavaScript bundle hosted on a content delivery network (CDN) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz" crossorigin="anonymous"></script>
 
 </body>
